# Handwriting-Recognition

./: README.md  main.py  pyproject.toml
