[project]
name = "handwriting-recognition"
version = "0.1.0"
description = ""
authors = [
    {name = "Ömer Asaf Karasu",email = "omerasafkarasu06@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "keras (>=3.10.0,<4.0.0)",
    "tensorflow (>=2.16.2)",
    "numpy (>=1.26.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
